--- a/test.jenkins_test.1/pom.xml
+++ b/test.jenkins_test.1/pom.xml
@@ -5,4 +5,8 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>test.jenkins_test.1</name>
   <description>test.jenkins_test.1</description>
+  <properties>
+	<maven.compiler.source>1.7</maven.compiler.source>
+	<maven.compiler.target>1.7</maven.compiler.target>
+  </properties>
 </project>
