--- a/test.jenkins_test.1/pom.xml
+++ b/test.jenkins_test.1/pom.xml
@@ -9,4 +9,11 @@
 	<maven.compiler.source>1.7</maven.compiler.source>
 	<maven.compiler.target>1.7</maven.compiler.target>
   </properties>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.apache.maven.wagon</groupId>
+  		<artifactId>wagon-http</artifactId>
+  		<version>2.10</version>
+  	</dependency>
+  </dependencies>
 </project>
